fix:Calculation history overflow

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,7 +16,9 @@
 
 .calculation_history {
   white-space: nowrap;
+  overflow: hidden;
 }
+
 .calculation_expression {
   overflow-x: scroll;
   width: 100%;
